# mathy

./: .all-contributorsrc  .coveragerc  .editorconfig  .gitignore  .prettierignore  CONTRIBUTING.md  Coach.py  Game.py  LICENSE.md  MCTS.py  Makefile  README.md  a3c.py  clean_dev.sh  code-of-conduct.md  codecov.yml  convert.py  ddqn.py  dev-requirements.txt  dev.py  director.py  dqn.py  embeddings.py  evaluate.py  exam.py  export.py  export.txt  export_to_js.sh  feat_lstm.py  forward_tensorboard.sh  greenkeeper.json  gym_env.py  initialize a turing machine with a empty tape  keras.py  keras2.py  lstm.py  main.py  mathy_fragile.py  mkdocs.yml  mount_fuse_bucket.sh  (+27 more)
agents/: README.md
libraries/mathy_python/: MANIFEST.in  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
libraries/mathy_python/mathy/: __init__.py  about.py  api.py  cli.py  contrastive.py  env.py  features.py  helpers.py  mathy.py  mathy_env.py  models.py  problems.py  solver.py  state.py  teacher.py  testing.py  time_step.py  traceback.py  types.py  util.py
libraries/mathy_python/tests/: test_agent_model.py  test_api.py  test_cli.py  test_densenet.py  test_env.py  test_environment_state.py  test_envs.py  test_episode_memory.py  test_expressions.py  test_features.py  test_layout.py  test_math_game.py  test_mathy.py  test_models.py  test_muzero.py  test_parser.py  test_problems.py  test_reformer.py  test_rules.py  test_self_play.py  test_teacher.py  test_tree_node.py  test_util.py  test_zero.py
libraries/mathy_python/tools/: build.sh  clean.sh  deploy.sh  docs.sh  setup.sh  test.sh
(+1004 files in other folders)
