[semantic_release]
version_variable = mathy/about.py:__version__
upload_to_pypi = true

[mypy-tensorflow.*]
ignore_missing_imports = True

[mypy-tensorflow_probability.*]
ignore_missing_imports = True

[mypy-gym.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-colr.*]
ignore_missing_imports = True

[mypy-wasabi.*]
ignore_missing_imports = True

[mypy-srsly.*]
ignore_missing_imports = True


[options.extras_require]
fragile =
    fragile==0.0.27
    plangym==0.0.2
